--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -10,12 +10,14 @@
     }
 
     .card__img-holder{
-        width: 100%;
+        width: 330px;
         height: 330px;
     }
 
     .card__img{
-
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .card__footer{
